--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,8 @@
+/* Google fonts import */
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap');
+  
 /* Asterisk wildcard selector to overrise default styles added by the browser */
 * {
     padding: 0;
@@ -17,6 +22,7 @@ body {
 /* Header */
 header {
     background-color: lightcoral;
+    font: lato-bold;
 }
 
 /* Main Content */
