--- a/stylesheet.css
+++ b/stylesheet.css
@@ -101,7 +101,7 @@ footer {
 }
 
 /* Media Queries: Tablets and Larger */
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
     /* Header */
     nav {
         display: block;
@@ -136,3 +136,11 @@ footer {
     }
 
 }
+
+/* Media Queries: Small Laptops and Larger */
+@media screen and (min-width: 992px) {
+    #menu a:hover{
+        border-bottom: 1px solid #3a3a3a;
+    }
+}
+
