[MAIN] Hero Image ADD

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -89,10 +89,16 @@ nav {
 
 /* Main Content */
 main {
-    background-color: lightblue;
     /* Make content take up the whole page auto */
     flex: 1 0 auto;
     margin-top: 47px;
+}
+
+/* Hero */
+#hero {
+    height: 600px;
+    width: 100%;
+    background-color: green;
 }
 
 /* Footer */
