--- a/stylesheet.css
+++ b/stylesheet.css
@@ -98,7 +98,7 @@ main {
 #hero {
     height: 600px;
     width: 100%;
-    background-color: green;
+    background: url(assets/images/hero-image.webp) no-repeat center center/cover;
 }
 
 /* Footer */
