--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,6 +20,14 @@ body {
     font-family: 'lato', sans-serif;
 }
 
+h1, h2, h3 {
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-size: 2rem;
+    color: #252525;
+}
+
 /* Header */
 header {
     background-color: #ffffff;
@@ -36,14 +44,6 @@ header {
 header a {
     color: inherit;
     text-decoration: none;
-}
-
-h1{
-    font-family: 'Oswald', sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    font-size: 2rem;
-    color: #252525;
 }
 
 #menu {
@@ -94,11 +94,28 @@ main {
     margin-top: 47px;
 }
 
-/* Hero */
+/* Hero Section */
 #hero {
     height: 600px;
     width: 100%;
     background: url(assets/images/hero-image.webp) no-repeat center center/cover;
+    position: relative;
+}
+
+#cover-text {
+    /*Final Number is the opacity of the background color */
+    background-color:  rgba(241, 109, 107, .7);
+    font-size: 130%;
+    position: absolute;
+    bottom: 30px;
+    width: 80%;
+    min-height: 200px;
+    padding-top: 40px;
+    padding-left: 10px;
+}
+
+#cover-text > h2, #cover-text > h3 {
+    color: #ffffff;
 }
 
 /* Footer */
@@ -149,6 +166,12 @@ main {
     main {
         /* Push content down to accomadate the larger header */
         margin-top: 60px;
+    }
+
+    /* Hero Section */
+    #cover-text {
+        width: 300px;
+        right: 50px;
     }
 
 }
