--- a/stylesheet.css
+++ b/stylesheet.css
@@ -125,9 +125,9 @@ main {
 }
 
 #reasons h2 {
-    font-size: 280%;
-    text-align: center;
     margin-bottom: 20px;
+    text-align: center;
+    font-size: 280%;
 }
 
 #benefits-physical > div, #benefits-mental > div {
@@ -138,6 +138,10 @@ main {
 #benefits hr {
     border-top: 1px solid #3a3a3a;
     margin: 5px 0;
+}
+
+#benefits p {
+    padding: 0 20px
 }
 
 /* Footer */
