--- a/stylesheet.css
+++ b/stylesheet.css
@@ -217,6 +217,23 @@ main {
         right: 50px;
     }
 
+    /* Reason Section */
+    #benefits-physical, #benefits-mental {
+        display: flex;
+        flex-direction: column;
+        width: 100%
+    }
+
+    #benefits-physical > div, #benefits-mental > div {
+        width: 75%;
+    }
+
+    #benefits-mental > div {
+        text-align: end;
+        align-self: flex-end;
+
+    }
+
 }
 
 /* Media Queries: Small Laptops and Larger */
@@ -226,3 +243,31 @@ main {
     }
 }
 
+/* Media Queries: Largest Screen */
+@media screen and (min-width: 992px) {
+    /* Reasons Section */
+    #benefits {
+        display: flex;
+        flex-direction: row;
+    }
+
+    #benefits > div {
+        flex: 1;
+    }
+
+    #benefits-image {
+        order: 0;
+    }
+
+    #benefits-mental {
+        order: 1;
+    }
+
+    #benefits-mental > div {
+        align-self: flex-start;
+    }
+
+    #benefits-physical > div {
+        align-self: flex-end;
+    }
+}
