--- a/stylesheet.css
+++ b/stylesheet.css
@@ -161,6 +161,22 @@ main {
     justify-content: center;
 }
 
+/* Meet-Up Section */
+#times {
+    background: url(assets/images/dublin-city.webp) no-repeat center center/cover;
+    /* Handles responsivity without the need of a media  query */
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#times div {
+    color: #fafafa;
+    padding: 15px;
+    text-align: centre;
+    background-color: rgba(0,0,0,.6);
+}
+
+
 /* Footer */
 #social-networks {
     text-align: center;
