--- a/stylesheet.css
+++ b/stylesheet.css
@@ -172,8 +172,19 @@ main {
 #times div {
     color: #fafafa;
     padding: 15px;
-    text-align: centre;
+    text-align: center;
     background-color: rgba(0,0,0,.6);
+    /* This will not wrap on screens less than 400px wide.
+    Each div will expand to fill the available space on its row */
+    flex-basis: 200px;
+    flex-grow: 1;
+    /* Creates a grid of meetup times, divides over the background image */
+    border: 2px solid white;
+}
+
+#times h3 {
+    /* override the heading color */
+    color: #fafafa;
 }
 
 
