--- a/stylesheet.css
+++ b/stylesheet.css
@@ -96,6 +96,8 @@ main {
     /* Make content take up the whole page auto */
     flex: 1 0 auto;
     margin-top: 47px;
+    display: flex;
+    flex-direction: column;
 }
 
 /* Hero Section */
@@ -192,7 +194,6 @@ main {
 }
 
 /* Gallery Page */
-
 #photos img {
     width: 100%;
     line-height: 1em;
@@ -201,6 +202,52 @@ main {
 
 #photos {
     line-height: 0;
+}
+
+/* Sign Up Page */
+#signup {
+    background: url(assets/images/signup-image.webp);
+    background-size: cover;
+    background-position: 75%;
+    flex-grow: 1;
+    padding: 20px 10% 0 10%;
+}
+
+#signup-form {
+    color: #ffffff;
+    background-color: rgba(60, 60, 60, 0.6);
+    padding: 30px;
+}
+
+#signup-form > h2 {
+    color: #fafafa;
+    margin-bottom: 20px;
+}
+
+.text-input {
+    background: transparent;
+    color: #fafafa;
+    width: 100%;
+    height: 25px;
+    margin: 5px 0 20px 0;
+    border: 1px solid #fafafa;
+    border-radius: 2px;
+    padding: 0 5px;
+}
+
+.radio-buttons {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.join-button {
+    margin-top: 20px;
+    border-radius: 2px;
+    padding: 15px 32px;
+    font-size: 100%;
+    background-color: #454b1b;
+    color: #fafafa;
 }
 
 /* Footer */
@@ -218,6 +265,13 @@ main {
     color: #3a3a3a;
 }
 
+/* Media Queries: Large or Landscape phones (576px and Up) */
+@media screen and (min-width: 576px) {
+    #photos {
+        column-count: 2;
+        column-gap: 0;
+    }
+}
 /* Media Queries: Tablets and Larger */
 @media screen and (min-width: 768px) {
     /* Header */
@@ -276,6 +330,17 @@ main {
 
     }
 
+    /*Gallery Wall */
+    #photos {
+        column-count: 3;
+        column-gap: 0;
+    }
+
+    /* Sign Up Page */
+    main {
+        flex
+    }
+
 }
 
 /* Media Queries: Small Laptops and Larger */
@@ -283,6 +348,13 @@ main {
     #menu a:hover{
         border-bottom: 1px solid #3a3a3a;
     }
+
+    /*Gallery Wall */
+    #photos {
+        column-count: 4;
+        column-gap: 0;
+    }
+
 }
 
 /* Media Queries: Largest Screen */
@@ -312,4 +384,5 @@ main {
     #benefits-physical > div {
         align-self: flex-end;
     }
+
 }
