--- a/stylesheet.css
+++ b/stylesheet.css
@@ -272,6 +272,7 @@ main {
         column-gap: 0;
     }
 }
+
 /* Media Queries: Tablets and Larger */
 @media screen and (min-width: 768px) {
     /* Header */
@@ -337,10 +338,26 @@ main {
     }
 
     /* Sign Up Page */
-    main {
-        flex
+    #signup {
+        background-position: center;
+        position: relative;
     }
 
+    #signup-form {
+        max-width: 400px;
+        position: absolute;
+        left: 10%;
+        top: 150px;
+    }
+
+    .text-input:hover {
+        border-color: #f16c6b;
+    }
+
+    .join-button:hover {
+        background-color: #fafafa;
+        color: #454b1b;
+    }
 }
 
 /* Media Queries: Small Laptops and Larger */
